# ift_coursework_2025

./: .gitignore  docker-compose.yml
team_Pearson/coursework_one/: .env.example  .flake8  .gitignore  .safety-project.ini  Main.py  README.md  docker-compose.pearson.override.yml  pyproject.toml
team_Pearson/coursework_one/config/: conf.yaml  conf.yaml.example
team_Pearson/coursework_one/data/: sp500_companies.csv
team_Pearson/coursework_one/docs/: README.md  ROLE4_INTEGRATION_NOTICE.md  data_catalog.md  data_dictionary.md  data_final_implementation.md  data_lineage.md  data_requirement.md  docker_compose_override.md  system_architecture.drawio
team_Pearson/coursework_one/logs/: pipeline_runs.jsonl
team_Pearson/coursework_one/modules/: __init__.py
team_Pearson/coursework_one/scripts/: audit_source_b_boundary.py  auto_update_job.sh  build_sphinx_docs.py  import_raw_news_to_minio.py  index_news_to_mongo.py  init_db.py  install_auto_update_cron.sh  manage_universe_overrides.py  run_pipeline_and_index.py  run_scheduled_pipeline.py  search_news.py  seed_universe_from_sqlite.py  uninstall_auto_update_cron.sh  validate_pipeline_data.py  verify_minio.sh
team_Pearson/coursework_one/sql/: alter_financial_metric_value_to_numeric_24_6.sql  init.sql
team_Pearson/coursework_one/tests/: conftest.py  test_airflow_dags_unit.py  test_args_parser_unit.py  test_audit_unit.py  test_cw2_features_coverage_unit.py  test_cw2_features_unit.py  test_db_models_unit.py  test_db_unit.py  test_e2e.py  test_edgar_xbrl_unit.py  test_factors_unit.py  test_finnhub_news_unit.py  test_init_db_unit.py  test_kafka_coverage_unit.py  test_kafka_unit.py  test_load_unit.py  test_manifest_unit.py  test_market_factors_unit.py  test_metadata_unit.py  test_mongo_utils_unit.py  test_normalize_unit.py  test_pipeline_integration.py  test_quality_unit.py  test_replay_regression.py  test_resilience_unit.py  test_scripts_unit.py  test_sentiment_unit.py  test_smoke.py  test_source_a_unit.py  test_source_b_unit.py  test_source_coverage_contract_unit.py  test_symbol_filter_unit.py
team_Wald/coursework_one/: .env.dev  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
team_Wald/coursework_one/a_pipeline/: README.md
team_Wald/coursework_one/b_pipeline/: README.md
team_Wald/coursework_one/c_pipeline/: README.md
team_Wald/coursework_one/config/: conf.yaml
team_Wald/coursework_one/docs/: conf.py  index.rst
team_Wald/coursework_one/modules/: __init__.py
team_Wald/coursework_one/test/: conftest.py  test_composite_scorer.py  test_config_and_args.py  test_data_cleaner.py  test_db_and_loading.py  test_db_connection.py  test_extraction.py  test_fx_extractor.py  test_gdelt.py  test_integration.py  test_kafka_and_loaders.py  test_kafka_modules.py  test_logger.py  test_minio_uploader.py  test_newsapi_extractor.py  test_parallel.py  test_pipeline_e2e.py  test_postgres_connection.py  test_progress.py  test_retry_handler.py  test_sentiment_analyzer.py  test_sentiment_scorer.py  test_value_calculator.py  test_value_scorer.py  test_yahoo_finance.py
team_Wald/coursework_two/: CHANGELOG.md  Main_CW2.py  README.md  pyproject.toml
team_Wald/coursework_two/config/: backtest_config.yaml
team_Wald/coursework_two/modules/: __init__.py
team_Wald/coursework_two/tests/: __init__.py  conftest.py  test_appendices.py  test_backtester.py  test_constraints.py  test_cw1_schema.py  test_data_loader.py  test_diversification.py  test_integration.py  test_momentum_filter.py  test_no_lookahead.py  test_performance.py  test_pitfalls.py  test_portfolio.py  test_risk.py  test_robustness.py  test_sentiment_signal.py  test_signal_combiner.py  test_universe.py  test_value_signal.py
team_kolmogorov/coursework_one/: .coveragerc  .env.example  .flake8  .gitignore  Main.py  README.md  docker-compose.yml  pyproject.toml
team_kolmogorov/coursework_one/.github/: PULL_REQUEST_TEMPLATE.md
team_kolmogorov/coursework_one/config/: conf.yaml
team_kolmogorov/coursework_one/docs/: Makefile  api.rst  architecture.rst  conf.py  index.rst  installation.rst  usage.rst
team_kolmogorov/coursework_one/modules/: __init__.py
team_kolmogorov/coursework_one/test/: conftest.py  test_advanced_patterns.py  test_alphavantage_downloader.py  test_base_downloader.py  test_circuit_breaker.py  test_company_static.py  test_concurrent_executor.py  test_config_and_args.py  test_data_cleaning.py  test_data_exporter.py  test_downloaders.py  test_e2e.py  test_esg_downloader.py  test_exceptions.py  test_extract_from_query.py  test_finnhub_downloader.py  test_fmp_downloader.py  test_gdelt_downloader.py  test_health_check.py  test_integration.py  test_kafka_ops.py  test_main_functions.py  test_main_orchestration.py  test_minio_store.py  test_models.py  test_mongo_conn.py  test_news_sentiment.py  test_newsapi_downloader.py  test_pipeline_metrics.py  (+7 more)
team_kolmogorov/coursework_two/: .env.example  .gitignore  CHANGELOG.md  Main.py  PLAN.md  README.md  SECURITY.md  pyproject.toml
team_luzin/coursework_one/: .bandit.yaml  .coveragerc  .flake8  .gitignore  CHANGELOG.md  README.md  REFACTORING_SUMMARY.md  REFACTOR_NOTES.md  STEP4_STATUS_FIX_SUMMARY.md  SUBMISSION_READINESS_AUDIT.md  SUBMISSION_READY.md  TEST_STRUCTURE_CLEANUP.md  TEST_STRUCTURE_PHASE2.md  main.py  pyproject.toml  pytest.ini  run_pipeline.py
team_luzin/coursework_two/: README.md  main.py  pyproject.toml  run_backtest.py  validate_performance_cross_check.py
team_neyman/coursework_one/: .coveragerc  Dockerfile  README.md  pyproject.toml
team_neyman/coursework_two/: .safety-project.ini  Dockerfile  README.md  main.py  pyproject.toml  scheduler.py
team_russell/coursework_one/: .flake8  .gitignore  README.md  docker-compose.kafka.yml  pyproject.toml
team_russell/coursework_two/: .flake8  .gitignore  CHANGELOG.md  Instructions for CW2.docx  README.md  main.py  pyproject.toml
team_wittgenstein/coursework_one/: README.md  main.py  pyproject.toml  testdoc.md
team_wittgenstein/coursework_two/: .flake8  .gitignore  README.md  main.py  pyproject.toml
(+4556 files in other folders)
