[project]
name = "team-pearson-coursework-one"
version = "0.1.0"
description = "CW1 shared ingestion, curation, and storage platform for Team Pearson"
readme = "README.md"
authors = [{ name = "Team Pearson", email = "team@example.com" }]
requires-python = ">=3.11,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false
packages = [{ include = "modules" }]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"
psycopg2-binary = "^2.9.11"
pandas = "^2.2.3"
sqlalchemy = "^2.0.36"
yfinance = "^0.2.66"
minio = "^7.2.10"
pymongo = "^4.10.1"
requests = "^2.32.3"
pysentiment2 = "^0.1.1"
langid = "^1.1.6"
redis = "^5.0.0"
finnhub-python = "^2.4.20"
numpy = "^1.26.0"
matplotlib = "^3.10.8"
kafka-python = "^2.0.2"
pydantic = "^2.12.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
black = "^26.3.1"
isort = "^5.13.2"
flake8 = "^7.1.1"
bandit = "^1.7.9"
sphinx = "^8.2.3"
myst-parser = "^4.0.1"
safety = "^3.7.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "E501"]

[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
addopts = "--cov=modules --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    # Legacy/infrastructure modules — tested by integration tests, not unit tests
    "modules/input/*",
    "modules/transform/factors.py",
    "modules/output/*",
    "modules/db/*",
    "modules/utils/args_parser.py",
    "modules/utils/env.py",
    "modules/utils/mongo.py",
]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
