[tool.poetry]
name = "coursework-one"
version = "0.1.0"
description = "UCL IFT Big Data in Quantitative Finance - Coursework One: Data Pipeline"
authors = ["TeamWald"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

# Database connectors
psycopg2-binary = "^2.9"
pymongo = "^4.6"
sqlalchemy = "^2.0"

# Object storage
minio = "^7.2"

# Data processing
pandas = "^2.1"
numpy = "^1.26"

# HTTP / data ingestion
requests = "^2.31"
beautifulsoup4 = "^4.12"

# Configuration
pyyaml = "^6.0"
python-dotenv = "^1.0"

# Scheduling
apscheduler = "^3.10"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4"
pytest-cov = "^4.1"

# Linting & formatting
flake8 = "^6.1"
black = "^23.11"
isort = "^5.12"

# Security scanning
bandit = "^1.7"
safety = "^2.3"

# Documentation
sphinx = "^7.2"
sphinx-rtd-theme = "^1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=80"

[tool.bandit]
exclude_dirs = [".venv", "test"]
