[tool.poetry]
name = "team-luzin-coursework-one"
version = "2.0.0"
description = "Production-grade investment strategy data pipeline"
authors = ["Team Luzin <team.luzin@ucl.ac.uk>"]
maintainers = ["Team Luzin <team.luzin@ucl.ac.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "modules"}]
keywords = ["finance", "data-pipeline", "investment", "quantitative"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business :: Financial :: Investment",
]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.0"
pymongo = "^4.0.0"
minio = "^7.1.0"
pyyaml = "^6.0"
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
bandit = "^1.7.0"
sphinx = "^6.0.0"
sphinx-rtd-theme = "^1.2.0"
yfinance = "^0.2.0"
pandas = "^2.0.0"
pyarrow = "^14.0.0"
numpy = "<2"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
