[tool.poetry]
name = "team-luzin-coursework-two"
version = "0.1.0"
description = "Portfolio construction, backtesting, and evaluation built on Coursework One outputs"
authors = ["Team Luzin <team.luzin@ucl.ac.uk>"]
readme = "README.md"
packages = [{include = "modules"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
numpy = "<2"
pyarrow = "^14.0.0"
matplotlib = "^3.7.0"
yfinance = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
