[tool.poetry]
name = "coursework-one"
version = "0.1.0"
description = ""
authors = ["TeamNeyman"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.2.0"
sqlalchemy = "^2.0.0"
numpy = ">=2.0.0"
spacy = "^3.7.0"
nltk = "^3.8.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}
yfinance = "^0.2.40"
tqdm = "^4.66.0"
minio = "^7.2.20"
pyyaml = "^6.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "srsly (>=2.5.2,<3.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["a_pipeline/test"]