[tool.poetry]
name = "coursework-two"
version = "0.1.0"
description = ""
authors = ["TeamNeyman"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.2.0"
numpy = ">=2.0.0"
matplotlib = ">=3.10.8,<4.0.0"
spacy = "^3.7.0"
nltk = "^3.8.0"
pyyaml = "^6.0.3"
sqlalchemy = "^2.0.49"
psycopg = {extras = ["binary"], version = "^3.1.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
