[tool.poetry]
name = "coursework-two"
version = "0.1.0"
description = ""
authors = ["TeamNeyman"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.2.0"
numpy = ">=2.0.0"
matplotlib = ">=3.10.8,<4.0.0"
spacy = "^3.7.0"
nltk = "^3.8.0"
pyyaml = "^6.0.3"
sqlalchemy = "^2.0.49"
psycopg = {extras = ["binary"], version = "^3.1.18"}
minio = "^7.2.20"
pymongo = "^4.16.0"
pyarrow = "^23.0.1"
fastparquet = "^2026.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "mongomock (>=4.3.0,<5.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "bandit (>=1.9.4,<2.0.0)",
    "safety (>=3.7.0,<4.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
