[tool.poetry]
name = "coursework-two-russell"
version = "0.1.0"
description = "Team Russell - Multi-Factor Equity Strategy & Backtesting"
authors = ["Team Russell"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
numpy = "^2.0"
scipy = "^1.11"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
yfinance = "^0.2"
wrds = "^3.5.0"
matplotlib = "^3.8"
seaborn = "^0.13"
duckdb = "^1.5"
fastapi = "^0.110"
uvicorn = "^0.29"
streamlit = "^1.33"
plotly = "^5.20"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
pytest-cov = ">=4.1"
flake8 = "^6.1"
black = "^23.0"
isort = "^5.12"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.coverage.paths]
source = ["scripts"]

[tool.coverage.run]
omit = [
    "*/step01_wrds_pull.py",
    "*/test_score_weighting.py",
    "*/test_sw_full_analysis.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
